[package]
name = "stride-plugin-template" # TODO: Change name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stride_plugin = { git = "https://github.com/stride-tasks/stride.git", rev = "b4a08df7153ede134900e151026c16bf8acdfdf4" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
#strip = true
