[package]
name = "stride-plugin-template" # TODO: Change name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stride_plugin = { git = "https://github.com/stride-tasks/stride.git", rev = "f036fda9af5b854bc9d76c9001cdf529937aab2f" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
#strip = true
