[package]
name = "stride-plugin-template" # TODO: Change name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stride_plugin = { git = "https://github.com/stride-tasks/stride.git", rev = "b39b66b98fb63b1c40e812ad316bd81b7bb5172b" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
#strip = true
